--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ li {
 }
 
 a {
-    color: #FFFFFF;
+    color: #E1DFDB;
     text-decoration: none;
 }
 
@@ -30,11 +30,10 @@ a {
     height: 600px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
 }
 
 .pagina__inicial__cabecalho::before {
-    background-color: rgba(31, 56, 80, 0.4);
+    background-color: rgba(31, 56, 80, 0.7);
     content: '';
     position: absolute;
     height: 100%;
@@ -68,7 +67,7 @@ a {
 .logotipo__texto__alternativo {
     margin: 0;
     padding: 16px 12px;
-    color: #FFFFFF;
+    color: #E1DFDB;
     font-family: "Playfair Display", serif;
     font-size: 24px;
     font-weight: 700;
@@ -78,7 +77,7 @@ a {
     padding: 10px 12px;
     display: flex;
     gap: 32px;
-    color: #FFFFFFDE;
+    color: #E1DFDB;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -90,7 +89,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #FFFFFF;
+    color: #E1DFDB;
     font-family: "Playfair Display", serif;
 }
 
@@ -98,7 +97,7 @@ a {
     background-color: transparent;
     margin: 0;
     padding: 44px 56px;
-    border: 5px solid #FFFFFF;
+    border: 5px solid #E1DFDB;
     text-align: center;
     font-size: 72px;
     font-weight: 700;
@@ -106,6 +105,7 @@ a {
 
 .banner__slogan {
     font-size: 12px;
+    font-weight: 400;
 }
 
 .cabecalho__reservas {
@@ -118,11 +118,10 @@ a {
 
 .reservas__botao {
     background-color: transparent;
-    margin: 40px;
     padding: 5px 30px;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #E1DFDB;
     border-radius: 3px;
-    color: #FFFFFF;
+    color: #E1DFDB;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
 }
@@ -143,6 +142,7 @@ a {
     color: #212121;
     font-family: "Playfair Display", serif;
     font-size: 12px;
+    font-weight: 400;
 }
 
 .principal__boas__vindas {
@@ -189,11 +189,6 @@ a {
     height: 300px;
 }
 
-.ilustracao__img {
-    height: 100px;
-    width: 500px;
-}
-
 .pagina__inicial__rodape {
     background-color: #E2DAD6;
     display: flex;
@@ -204,5 +199,7 @@ a {
     margin: 0;
     padding: 20px;
     color: rgba(0, 48, 95, 1);
+    font-family: 'Playfair Display', serif;
     font-size: 12px;
+    font-weight: 400;
 }
